Menu lateral e dialog de saida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Leandro Prensados</string>
     <string name="mensagem_inicial">Faça Seu Login</string>
     <string name="mensagem_sucess">Login realizado com sucesso</string>
+    <string name="abrir">Abrir</string>
+    <string name="fechar">Fechar</string>
 </resources>
